--- a/_toc.yml
+++ b/_toc.yml
@@ -26,7 +26,20 @@ parts:
   - caption: Методология и организация научных исследований
     chapters:
     - file: methodology-research/README.md
-    - file: methodology-research/book-1-chap-0.md
+    - file: methodology-research/book-0-chap-0.md
+      sections:
+        - file: methodology-research/book-0-chap-1.md
+        - file: methodology-research/book-0-chap-2.md
+        - file: methodology-research/book-0-chap-3.md
+        - file: methodology-research/book-0-chap-4.md
+        - file: methodology-research/book-0-chap-5.md
+        - file: methodology-research/book-0-chap-6.md
+        - file: methodology-research/book-0-chap-7.md
+        - file: methodology-research/book-0-chap-8.md
+        - file: methodology-research/book-0-chap-9.md
+        - file: methodology-research/book-0-bib.md
+    - file: methodology-research/book-1.md
+    - file: methodology-research/control.md
   - caption: ИРФМ
     numbered: false
     chapters:
@@ -56,6 +69,7 @@ parts:
     - file: database/lecture-1.md
     - file: database/lecture-2.md
     - file: database/lecture-3.md
+    - file: database/lecture-4.md
   - caption: Руский язык
     chapters:
     - file: russian/README.md
