--- a/_toc.yml
+++ b/_toc.yml
@@ -40,17 +40,18 @@ parts:
   #       - file: methodology-research/book-0-bib.md
   #   - file: methodology-research/book-1.md
   #   - file: methodology-research/control.md
-  - caption: ИРФМ
-    numbered: false
-    chapters:
-    # - file: infores-finmon/README.md
-    - file: infores-finmon/lectures.md
-    - file: infores-finmon/lecture-intro.md
-    - file: infores-finmon/lecture-1.md
-    - file: infores-finmon/lecture-5IS.md
-    - file: infores-finmon/lecture-5.md
-    - file: infores-finmon/lecture-6.md
-    - file: infores-finmon/control.md
+  # 
+  # - caption: ИРФМ
+  #   numbered: false
+  #   chapters:
+  #   # - file: infores-finmon/README.md
+  #   - file: infores-finmon/lectures.md
+  #   - file: infores-finmon/lecture-intro.md
+  #   - file: infores-finmon/lecture-1.md
+  #   - file: infores-finmon/lecture-5IS.md
+  #   - file: infores-finmon/lecture-5.md
+  #   - file: infores-finmon/lecture-6.md
+  #   - file: infores-finmon/control.md
   - caption: Актуальные подходы к обеспечению безопасности информации
     chapters:
     - file: infosec/lectures.md
